Make code Java 8 compatible